# bevy_demo_thing

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/atlases/: background.ron  background_eyes.ron  background_heads.ron  blocks.ron  door.ron  enemy_anims.ron  frame.ron  ladder.ron  level_select.ron  not_found.ron  player_anims.ron  revolving_door.ron  spawner.ron  tools.ron
assets/config/: loading.ron  movement.ron
assets/config/default_settings/: audio.ron  debug.ron  progression.ron
assets/world/: tile_definitions.ron
assets/world/levels/: auto_save.ron  confined.ron  demo_level.ron  kings_valley_0.ron  kings_valley_1.ron  kings_valley_2.ron  kings_valley_3.ron
dsf_core/: Cargo.toml
dsf_core/src/: lib.rs
dsf_core/src/audio/: play_sfx.rs  plugin.rs  sound_event.rs
dsf_core/src/camera/: camera_components.rs  camera_systems.rs  create_camera.rs  mod.rs
dsf_core/src/config/: editor_config.rs  loading_config.rs  mod.rs  movement_config.rs
dsf_core/src/config/settings/: audio_settings.rs  debug_settings.rs  mod.rs  progression.rs  user_cache.rs
dsf_core/src/level_select/: create_default_adventure.rs  mod.rs  setup_systems.rs  structs.rs  update_systems.rs
dsf_core/src/levels/: bundles.rs  keys_on_door.rs  level_save.rs  load_level_system.rs  mod.rs  world_bounds.rs
dsf_core/src/levels/tiles/: background.rs  mod.rs  objects.rs  tile_defs.rs  tilemap.rs
dsf_core/src/loading/: assets.rs  loading_systems.rs  mod.rs
dsf_core/src/loading/entities/: bundles.rs  inflate.rs  mod.rs
dsf_core/src/loading/levels/: debug_frames.rs  keys_on_door.rs  load_level_system.rs  mod.rs
dsf_core/src/states/: alt_menu.rs  app_state.rs  in_game.rs  level_select.rs  loading.rs  main_menu.rs  mod.rs  settings.rs
dsf_core/src/systems/: background_anim.rs  check_input.rs  debug.rs  mod.rs  revolving_door.rs  tools.rs  trap_wall.rs  win_checking.rs  win_handling.rs
dsf_core/src/systems/animations/: mod.rs  structs.rs  walk_anim.rs
dsf_core/src/systems/death/: death_anim.rs  mod.rs
dsf_core/src/systems/enemy/: kill.rs  mod.rs  spawner.rs
dsf_core/src/systems/menu/: alt_menu.rs  button.rs  main_menu.rs  mod.rs  setup_hud.rs
dsf_core/src/systems/motion/: mod.rs  move_enemy.rs  move_player.rs  movement.rs  steering.rs
dsf_core/src/systems/motion/structs/: coords.rs  dimens.rs  direction.rs  mod.rs  player.rs  pos.rs  steering.rs  steering_intent.rs  steering_mode.rs  velocity.rs
dsf_core/src/systems/rewind/: structs.rs  systems.rs
dsf_core/src/util/: files.rs  mod.rs  window_event_handler.rs
dsf_editor/: Cargo.toml
dsf_editor/src/: level_editor_state.rs  lib.rs
dsf_editor/src/components/: cursor.rs  mod.rs  painted_tile.rs  selection.rs
dsf_editor/src/resources/: blueprint.rs  debug_lines.rs  level_edit.rs  mod.rs
dsf_editor/src/resources/status/: brush.rs  editor_status.rs  mod.rs  selection.rs
dsf_editor/src/states/: editor_state.rs  file_actions.rs  mod.rs
dsf_editor/src/systems/: check_input.rs  mod.rs  place_tiles.rs  preview_animation.rs  refresh_previews.rs  selection.rs  setup.rs  tile_paint.rs  update_background.rs  update_ui.rs
dsf_editor/src/systems/cursor/: animation.rs  controls.rs  mod.rs  setup.rs
src/: main.rs
